# pydocker

./: .gitmodules  Dockerfile  docker-compose.yaml
pydocker/: pyproject.toml
