[tool.poetry]
name = "pydocker"
version = "0.1.0"
description = ""
authors = ["subing.chen <subing.chen@garena.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
